# bloc-labs

./: .dockerignore  .env  .env.dev  .gitignore  CNAME  Dockerfile  cloudbuild.yaml  db.txt  docker-compose.yaml  env.txt  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  todo.txt
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
instance/: development.db
migrations/: env.py
migrations/versions/: 719b249e19f2_.py  97c043deae54_.py  ac963254cdab_.py  aed41c1b6f15_.py  b7fe676969d5_.py  c13ebff38576_.py  f385376e2b44_.py
website/: __init__.py  admin.py  api.py  app.py  auth.py  config.py  db.sqlite3  models.py  test.py  util.py  views.py
website/apis/users/: user.py
website/customers/: auth.py
website/static/app/css/: main.css  prism.css  setup.css  styles.css
website/static/app/js/: auth-script.js  auto-fill.js  bloc-kit.js  bloc.umd.min.js  docs.min.js  mp4.js  prism.js  setup.js  tz.js
website/static/css/: main.css  style.css  styles.css
website/static/js/: bloc.js  script.js  simplewebauthn-browser.4.1.0.umd.min.js  util.js
website/static/js/webauthn/: authn.js
website/templates/admin/: base.html  home.html
website/templates/app/: base.html  docs_login.html  docs_signup.html  home.html  index.html  pricing.html  signupsuccess.html
website/templates/app/account/: setup.html
website/templates/app/auth/: login.html  login_email.html  signup.html  (+1 more)
website/templates/demo-site/: debug.html  demo-home-authorized.html  demo-home.html  welcome.html  welcome_back.html
(+41 files in other folders)
