[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.1.2"
webauthn = "^1.5.2"
requests = "^2.27.1"
Flask-Login = "^0.6.1"
Flask-SQLAlchemy = "^2.5.1"
db = "^0.1.1"
Flask-Session = "^0.4.0"
dict = "^2020.12.3"
Flask-Migrate = "^4.0.2"
docker = "6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"